--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "expo": "^25.0.0",
     "firebase": "^4.9.0",
+    "lodash": "^4.17.5",
     "react": "16.2.0",
     "react-native": "0.52.2",
     "react-native-elements": "^0.19.0",
